--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": " npm i uuid && tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "postinstall": "npm install --save-dev @types/uuid @types/react-beautiful-dnd"
   },
   "dependencies": {
     "autoprefixer": "^10.4.18",
